--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -14,6 +14,24 @@
 {% include _navigation.html %}
 
 {% if page.image.feature %}
+  {% if page.image.feature contains '.v4p' %}
+  <script language="JavaScript" src="assets/js/vvvv_js/lib/jquery/jquery-1.8.2.min.js"></script> 
+  <script language="JavaScript" src="assets/js/vvvv_js/vvvv.js"></script>
+  <link rel="stylesheet" href="assets/js/vvvv_js/vvvviewer/vvvv.css"></script>
+  <script language="JavaScript">
+    $(document).ready(function() {
+    VVVV.init("assets/js/vvvv_js/", 'full', function() {
+      console.log('VVVV.js initialized'); 
+    });
+    });
+  </script>
+  <script language="VVVV" src="{{ page.image.feature }}"></script>
+    {% if page.image.renderer %}
+    <center>
+      <div id="{{ page.image.renderer }}"></div>
+    </center>
+    {% endif %}
+  {% else %}
   <div class="image-wrap">
   <img src=
     {% if page.image.feature contains 'http://' %}
@@ -24,10 +42,11 @@
       "{{ site.url }}/images/{{ page.image.feature }}"
     {% endif %}
   alt="{{ page.title }} feature image">
-  {% if page.image.credit %}
-    <span class="image-credit">Photo Credit: <a href="{{ page.image.creditlink }}">{{ page.image.credit }}</a></span>
-  {% endif %}
+    {% if page.image.credit %}
+      <span class="image-credit">Photo Credit: <a href="{{ page.image.creditlink }}">{{ page.image.credit }}</a></span>
   </div><!-- /.image-wrap -->
+    {% endif %}<!-- img -->
+  {% endif %}<!-- /.v4p -->
 {% endif %}
 
 <div id="main" role="main">
