Modifying the layout of post-index to display the posts' thumbnail ('thumb') image just before the post-title

--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -47,6 +47,11 @@
       {% endif %}
     {% endunless %}
     <article>
+      {% if post.image.thumb %}
+      <div class="image-wrap">
+      <img src="{{ site.url }}/images/{{ post.image.thumb }}">
+      </div>
+      {% endif %}
       {% if post.link %}
         <h2 class="link-post"><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a> <a href="{{ post.link }}" target="_blank" title="{{ post.title }}"><i class="fa fa-link"></i></h2>
       {% else %}
