--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -47,9 +47,9 @@
       {% endif %}
     {% endunless %}
     <article>
-      {% if post.image.thumb %}
+      {% if post.image.teaser %}
       <div class="image-wrap">
-      <img src="{{ site.url }}/images/{{ post.image.thumb }}">
+      <img src="{{ site.url }}/images/{{ post.image.teaser }}">
       </div>
       {% endif %}
       {% if post.link %}
