--- a/_includes/_scripts.html
+++ b/_includes/_scripts.html
@@ -24,7 +24,8 @@
 
 <!-- vvvv.js initialization -->
 {% if page.vvvv == true %}
-<script language="JavaScript" src="{{ site.url }}/assets/js/vvvv_js/lib/jquery/jquery-1.8.2.min.js"></script>
+<!-- <script language="JavaScript" src="{{ site.url }}/assets/js/vvvv_js/lib/jquery/jquery-1.8.2.min.js"></script> -->
+<script language="JavaScript" src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
 <script language="JavaScript" src="{{ site.url }}/assets/js/vvvv_js/vvvv.js"></script>
 <link rel="stylesheet" href="{{ site.url }}/assets/js/vvvv_js/vvvviewer/vvvv.css">
 <script language="JavaScript">
