Specified the size of the pdf icon because it displayed incorrectly in some cases

--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -3,5 +3,5 @@
 {{ reference }}
 
 {% if link %}
-<a href="{{link}}"><img src="/images/pdf.png"></a>
+<a href="{{link}}"><img src="/images/pdf.png" style="width: 16px; height: 16px;" /></a>
 {% endif %}
